--- a/XRewez_App_online.json
+++ b/XRewez_App_online.json
@@ -2,23 +2,13 @@
   "apps": [
     {
       "id": "app1",
-      "name": "تطبيقي الأول",
-      "package": "com.example.app1",
-      "version": "1.0.0",
-      "last_update": "2025/5/31",
-      "installed": true,
-      "image_url": "https://example.com/image1.png",
-      "apk_url": "https://example.com/app1.apk"
-    },
-    {
-      "id": "app2",
-      "name": "تطبيقي الثاني",
-      "package": "com.example.app2",
-      "version": "2.1.3",
-      "last_update": "2025/6/01",
+      "name": "تطبيقي",
+      "package": "com.example.app",
+      "version": "1.0",
+      "last_update": "2025-06-01",
       "installed": false,
-      "image_url": "https://example.com/image2.png",
-      "apk_url": "https://example.com/app2.apk"
+      "apk_url": "https://example.com/app.apk",
+      "image_url": "https://example.com/image.jpg"
     }
   ]
 }
