--- a/XRewez_App_online.json
+++ b/XRewez_App_online.json
@@ -7,7 +7,7 @@
     "last_update": "2025-05-01",
     "arch": "arm64-v8a",
     "image_url": "https://example.com/app1.png",
-    "apk_url": "https://example.com/app1.apk"
+    "apk_url": "https://github.com/XRewezofficial/XRewez/raw/main/%D8%A5%D8%B3%D8%AA%D8%AE%D8%B1%D8%A7%D8%AC%20%D8%A7%D9%84%D8%A7%D8%B2%D8%A7%D8%AD%D8%A7%D8%AA_1.0.apk"
   },
   {
     "id": "app2",
