--- a/XRewez_App_online.json
+++ b/XRewez_App_online.json
@@ -17,7 +17,7 @@
     "last_update": "2025-04-15",
     "arch": "armeabi-v7a",
     "image_url": "https://example.com/app2.png",
-    "apk_url": "https://example.com/app2.apk"
+    "apk_url": "https://drive.google.com/uc?export=download&id=1-DAXwybi07uKMtNcmAFt0RCZkW-bcM8u"
   },
   {
     "id": "app3",
