--- a/XRewez_App_online.json
+++ b/XRewez_App_online.json
@@ -5,7 +5,7 @@
     "name": "MT Manger",
     "package": "com.mt.manager",
     "version": "11",
-    "last_update": "2025-05-01",
+    "last_update": "2025-06-08",
     "arch": "arm64-v8a",
     "image_url": "https://example.com/app1.png",
     "apk_url": "https://github.com/XRewezofficial/XRewez/raw/main/%D8%A5%D8%B3%D8%AA%D8%AE%D8%B1%D8%A7%D8%AC%20%D8%A7%D9%84%D8%A7%D8%B2%D8%A7%D8%AD%D8%A7%D8%AA_1.0.apk"
@@ -15,11 +15,11 @@
     "type": "Games",
     "name": "PUBG Mobile Global",
     "package": "com.tencent.ig",
-    "version": "3.8",
-    "last_update": "2025-05-01",
+    "version": "3.8.1",
+    "last_update": "2025-06-08",
     "arch": "arm64-v8a",
-    "image_url": "https://example.com/app1.png",
-    "apk_url": "https://github.com/XRewezofficial/XRewez/raw/main/%D8%A5%D8%B3%D8%AA%D8%AE%D8%B1%D8%A7%D8%AC%20%D8%A7%D9%84%D8%A7%D8%B2%D8%A7%D8%AD%D8%A7%D8%AA_1.0.apk"
+    "image_url": "https://mt3ateema.com/image/PUBGM-GL-v3.8.1-Image.png"
+    "apk_url": "https://mt3ateema.com/gl64bit/PUBGM-GL-v3.8.1-64Bit.apk"
   },
   {
     "id": "Games2",
@@ -27,10 +27,10 @@
     "name": "PUBG Mobile Global",
     "package": "com.tencent.ig",
     "version": "3.8",
-    "last_update": "2025-04-15",
+    "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
-    "image_url": "https://example.com/app2.png",
-    "apk_url": "https://drive.google.com/uc?export=download&id=1-DAXwybi07uKMtNcmAFt0RCZkW-bcM8u"
+    "image_url": "https://mt3ateema.com/image/PUBGM-GL-v3.8.1-Image.png"
+    "apk_url": "https://mt3ateema.com/gl32bit/PUBGM-GL-v3.8.1-32Bit.apk"
   },
   {
     "id": "Games3",
@@ -38,10 +38,10 @@
     "name": "PUBG Mobile Korea",
     "package": "com.pubg.krmobile",
     "version": "3.8",
-    "last_update": "2025-05-01",
+    "last_update": "2025-06-08",
     "arch": "arm64-v8a",
-    "image_url": "https://example.com/app1.png",
-    "apk_url": "https://example.com/app1.apk"
+    "image_url": "https://mt3ateema.com/image/PUBGM-KR-v3.8-Image.png"
+    "apk_url": "https://mt3ateema.com/kr64bit/PUBGM-KR-v3.8-64Bit.apk"
   },
   {
     "id": "Games4",
@@ -49,9 +49,53 @@
     "name": "PUBG Mobile Korea",
     "package": "com.pubg.krmobile",
     "version": "3.8",
-    "last_update": "2025-04-15",
+    "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
-    "image_url": "https://example.com/app2.png",
-    "apk_url": "https://example.com/app2.apk"
+    "image_url": "https://mt3ateema.com/image/PUBGM-KR-v3.8-Image.png"
+    "apk_url": "https://mt3ateema.com/kr32bit/PUBGM-KR-v3.8-32Bit.apk"
+  },
+    {
+    "id": "Games5",
+    "type": "Games",
+    "name": "PUBG Mobile Vietnam",
+    "package": "com.vng.pubgmobile",
+    "version": "3.8",
+    "last_update": "2025-06-08",
+    "arch": "arm64-v8a",
+    "image_url": "https://mt3ateema.com/image/PUBGM-VN-v3.8-Image.png"
+    "apk_url": "https://mt3ateema.com/vn64bit/PUBGM-VN-v3.8-64Bit.apk"
+  },
+  {
+    "id": "Games6",
+    "type": "Games",
+    "name": "PUBG Mobile Vietnam",
+    "package": "com.vng.pubgmobile",
+    "version": "3.8",
+    "last_update": "2025-06-08",
+    "arch": "armeabi-v7a",
+    "image_url": "https://mt3ateema.com/image/PUBGM-VN-v3.8-Image.png"
+    "apk_url": "https://mt3ateema.com/vn32bit/PUBGM-VN-v3.8-32Bit.apk"
+  },
+    {
+    "id": "Games7",
+    "type": "Games",
+    "name": "PUBG Mobile Taiwan",
+    "package": "com.rekoo.pubgm",
+    "version": "3.8",
+    "last_update": "2025-06-08",
+    "arch": "arm64-v8a",
+    "image_url": "https://mt3ateema.com/image/PUBGM-TW-v3.8-Image.png"
+    "apk_url": "https://mt3ateema.com/tw64bit/PUBGM-TW-v3.8-64Bit.apk"
+  },
+  {
+    "id": "Games8",
+    "type": "Games",
+    "name": "PUBG Mobile Taiwan",
+    "package": "com.rekoo.pubgm",
+    "version": "3.8",
+    "last_update": "2025-06-08",
+    "arch": "armeabi-v7a",
+    "image_url": "https://mt3ateema.com/image/PUBGM-TW-v3.8-Image.png"
+    "apk_url": "https://mt3ateema.com/tw32bit/PUBGM-TW-v3.8-32Bit.apk"
   }
 ]
