--- a/XRewez_App_online.json
+++ b/XRewez_App_online.json
@@ -5,6 +5,7 @@
     "name": "MT Manger",
     "package": "bin.mt.plus",
     "version": "2.16.5",
+    "version_code": "24081305",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
     "image_url": "https://example.com/app1.png",
@@ -16,6 +17,7 @@
     "name": "PUBG Mobile Global",
     "package": "com.tencent.ig",
     "version": "3.8.1",
+    "version_code": "19935",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
     "image_url": "https://mt3ateema.com/image/PUBGM-GL-v3.8.1-Image.png",
@@ -27,7 +29,8 @@
     "type": "Games",
     "name": "PUBG Mobile Global",
     "package": "com.tencent.ig",
-    "version": "3.8",
+    "version": "3.8.1",
+    "version_code": "19930",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
     "image_url": "https://mt3ateema.com/image/PUBGM-GL-v3.8.1-Image.png",
@@ -40,6 +43,7 @@
     "name": "PUBG Mobile Korea",
     "package": "com.pubg.krmobile",
     "version": "3.8",
+    "version_code": "19925",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
     "image_url": "https://mt3ateema.com/image/PUBGM-KR-v3.8-Image.png",
@@ -52,6 +56,7 @@
     "name": "PUBG Mobile Korea",
     "package": "com.pubg.krmobile",
     "version": "3.8",
+    "version_code": "19920",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
     "image_url": "https://mt3ateema.com/image/PUBGM-KR-v3.8-Image.png",
@@ -64,6 +69,7 @@
     "name": "PUBG Mobile Vietnam",
     "package": "com.vng.pubgmobile",
     "version": "3.8",
+    "version_code": "19925",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
     "image_url": "https://mt3ateema.com/image/PUBGM-VN-v3.8-Image.png",
@@ -76,6 +82,7 @@
     "name": "PUBG Mobile Vietnam",
     "package": "com.vng.pubgmobile",
     "version": "3.8",
+    "version_code": "19920",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
     "image_url": "https://mt3ateema.com/image/PUBGM-VN-v3.8-Image.png",
@@ -88,6 +95,7 @@
     "name": "PUBG Mobile Taiwan",
     "package": "com.rekoo.pubgm",
     "version": "3.8",
+    "version_code": "19925",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
     "image_url": "https://mt3ateema.com/image/PUBGM-TW-v3.8-Image.png",
@@ -100,6 +108,7 @@
     "name": "PUBG Mobile Taiwan",
     "package": "com.rekoo.pubgm",
     "version": "3.8",
+    "version_code": "19920",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
     "image_url": "https://mt3ateema.com/image/PUBGM-TW-v3.8-Image.png",
