--- a/XRewez_App_online.json
+++ b/XRewez_App_online.json
@@ -8,8 +8,8 @@
     "version_code": "24081305",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
-    "image_url": "https://example.com/app1.png",
-    "apk_url": "https://github.com/XRewezofficial/XRewez/raw/main/%D8%A5%D8%B3%D8%AA%D8%AE%D8%B1%D8%A7%D8%AC%20%D8%A7%D9%84%D8%A7%D8%B2%D8%A7%D8%AD%D8%A7%D8%AA_1.0.apk"
+    "image_url": "soon",
+    "apk_url": "soon"
   },
   {
     "id": "Games1",
@@ -20,9 +20,9 @@
     "version_code": "19935",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-GL-v3.8.1-Image.png",
-    "apk_url": "https://mt3ateema.com/gl64bit/PUBGM-GL-v3.8.1-64Bit.apk",
-    "obb_url": "https://mt3ateema.com/gl64bit/main.19935.com.tencent.ig.obb"
+    "image_url": "/image/PUBGM-GL-v3.8.1-Image.png",
+    "apk_url": "/gl64bit/PUBGM-GL-v3.8.1-64Bit.apk",
+    "obb_url": "/gl64bit/main.19935.com.tencent.ig.obb"
   },
   {
     "id": "Games2",
@@ -33,9 +33,9 @@
     "version_code": "19930",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-GL-v3.8.1-Image.png",
-    "apk_url": "https://mt3ateema.com/gl32bit/PUBGM-GL-v3.8.1-32Bit.apk",
-    "obb_url": "https://mt3ateema.com/gl32bit/main.19930.com.tencent.ig.obb"
+    "image_url": "/image/PUBGM-GL-v3.8.1-Image.png",
+    "apk_url": "/gl32bit/PUBGM-GL-v3.8.1-32Bit.apk",
+    "obb_url": "/gl32bit/main.19930.com.tencent.ig.obb"
   },
   {
     "id": "Games3",
@@ -46,9 +46,9 @@
     "version_code": "19925",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-KR-v3.8-Image.png",
-    "apk_url": "https://mt3ateema.com/kr64bit/PUBGM-KR-v3.8-64Bit.apk",
-    "obb_url": "https://mt3ateema.com/kr64bit/main.19925.com.pubg.krmobile.obb"
+    "image_url": "/image/PUBGM-KR-v3.8-Image.png",
+    "apk_url": "/kr64bit/PUBGM-KR-v3.8-64Bit.apk",
+    "obb_url": "/kr64bit/main.19925.com.pubg.krmobile.obb"
   },
   {
     "id": "Games4",
@@ -59,9 +59,9 @@
     "version_code": "19920",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-KR-v3.8-Image.png",
-    "apk_url": "https://mt3ateema.com/kr32bit/PUBGM-KR-v3.8-32Bit.apk",
-    "obb_url": "https://mt3ateema.com/kr32bit/main.19920.com.pubg.krmobile.obb"
+    "image_url": "/image/PUBGM-KR-v3.8-Image.png",
+    "apk_url": "/kr32bit/PUBGM-KR-v3.8-32Bit.apk",
+    "obb_url": "/kr32bit/main.19920.com.pubg.krmobile.obb"
   },
     {
     "id": "Games5",
@@ -72,9 +72,9 @@
     "version_code": "19925",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-VN-v3.8-Image.png",
-    "apk_url": "https://mt3ateema.com/vn64bit/PUBGM-VN-v3.8-64Bit.apk",
-    "obb_url": "https://mt3ateema.com/vn64bit/main.19925.com.vng.pubgmobile.obb"
+    "image_url": "/image/PUBGM-VN-v3.8-Image.png",
+    "apk_url": "/vn64bit/PUBGM-VN-v3.8-64Bit.apk",
+    "obb_url": "/vn64bit/main.19925.com.vng.pubgmobile.obb"
   },
   {
     "id": "Games6",
@@ -85,9 +85,9 @@
     "version_code": "19920",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-VN-v3.8-Image.png",
-    "apk_url": "https://mt3ateema.com/vn32bit/PUBGM-VN-v3.8-32Bit.apk",
-    "obb_url": "https://mt3ateema.com/vn32bit/main.19920.com.vng.pubgmobile.obb"
+    "image_url": "/image/PUBGM-VN-v3.8-Image.png",
+    "apk_url": "/vn32bit/PUBGM-VN-v3.8-32Bit.apk",
+    "obb_url": "/vn32bit/main.19920.com.vng.pubgmobile.obb"
   },
     {
     "id": "Games7",
@@ -98,9 +98,9 @@
     "version_code": "19925",
     "last_update": "2025-06-08",
     "arch": "arm64-v8a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-TW-v3.8-Image.png",
-    "apk_url": "https://mt3ateema.com/tw64bit/PUBGM-TW-v3.8-64Bit.apk",
-    "obb_url": "https://mt3ateema.com/tw64bit/main.19925.com.rekoo.pubgm.obb"
+    "image_url": "/image/PUBGM-TW-v3.8-Image.png",
+    "apk_url": "/tw64bit/PUBGM-TW-v3.8-64Bit.apk",
+    "obb_url": "/tw64bit/main.19925.com.rekoo.pubgm.obb"
   },
   {
     "id": "Games8",
@@ -111,8 +111,8 @@
     "version_code": "19920",
     "last_update": "2025-06-08",
     "arch": "armeabi-v7a",
-    "image_url": "https://mt3ateema.com/image/PUBGM-TW-v3.8-Image.png",
-    "apk_url": "https://mt3ateema.com/tw32bit/PUBGM-TW-v3.8-32Bit.apk",
-    "obb_url": "https://mt3ateema.com/tw32bit/main.19920.com.rekoo.pubgm.obb"
+    "image_url": "/image/PUBGM-TW-v3.8-Image.png",
+    "apk_url": "/tw32bit/PUBGM-TW-v3.8-32Bit.apk",
+    "obb_url": "/tw32bit/main.19920.com.rekoo.pubgm.obb"
   }
 ]
